<resources>
    <string name="app_name">ChronosMobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_transferir">Transferir Marcas</string>
    <string name="menu_descargar">Descargar Personal</string>
    <string name="menu_gallery">Configuraciones</string>
    <string name="menu_reporte">Reporte</string>
</resources>