<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_transferir"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_transferir" />
        <item
            android:id="@+id/nav_descargar"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_descargar" />
        <item
            android:id="@+id/nav_reporte"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_reporte" />
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
    </group>
</menu>